# MasayaBot-Repo

./: README.md  main.py  pyproject.toml  requirements.txt
cogs/: pokedex.py  quote.py  wiki.py
